objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Expected_Install_Days__c</fullName>
        <description>The number of days we are expecting the installation to take. This will be used to calculate the bonuses for installers.</description>
        <label>Expected Install Days</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Rebate__c</fullName>
        <description>This is the dollar value of the rebate we expect project to be eligable for.</description>
        <inlineHelpText>Expected Rebate Amount- required at Project Awarded. Enter $0 if rebate is not applicable</inlineHelpText>
        <label>Expected Rebate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Yearly_Production_in_kWh__c</fullName>
        <label>Expected Yearly Production in kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exposure_Category__c</fullName>
        <label>Exposure Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Warranty__c</fullName>
        <description>This is the extended warranty that the customer wants to purchase.</description>
        <label>Extended Warranty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>7-Year Inverter</fullName>
                </value>
                <value>
                    <fullName>10-Year Inverter</fullName>
                </value>
                <value>
                    <fullName>10-Year System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extra_Product_Cost__c</fullName>
        <label>Extra Product Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_13_14_Project_Size__c</fullName>
        <formula>IF( 
AND( 
CloseDate &gt;= DATE(2013, 02, 01), 
CloseDate &lt;= DATE(2014, 02, 28) 
), 
 Project_System_Size__c , 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feb 13-14 Project Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Contract_Price__c</fullName>
        <formula>Amount +  Change_Orders__c + ESDContractValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amounts + Change Orders (Original EPC Contract Price + Approved Change Orders) +Storage Contract Value
*Excludes O&amp;M</inlineHelpText>
        <label>S + S Contract Value + Chang Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_EPC_W_PreLim_Approved_Pricing__c</fullName>
        <inlineHelpText>used with rollup helper to pull most recent preliminarily approve pricing tool price from Final EPC $/watt field</inlineHelpText>
        <label>Final EPC $/W - PreLim Approved Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_EPC_W_from_Approved_Pricing_Req__c</fullName>
        <inlineHelpText>used in conjunction with roll up helper to pull value from approved pricing request, Final EPC $/watt</inlineHelpText>
        <label>Final EPC $/W from Approved Pricing Req</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Payment_Amount__c</fullName>
        <description>This is the amount of the final payment due upon passin city inspection.</description>
        <label>Final Payment Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finalupdate__c</fullName>
        <label>Finalupdate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing_Options_Provided__c</fullName>
        <inlineHelpText>Denotes financing options that were provided to the customer.</inlineHelpText>
        <label>Financing Options Provided</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>PPA</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>PACE</fullName>
                </value>
                <value>
                    <fullName>TEML (tax -exempt municipal lease)</fullName>
                </value>
                <value>
                    <fullName>GO Bond</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <inlineHelpText>Denotes the Financing that was selected when the contract was signed.</inlineHelpText>
        <label>Final Financing Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PPA – Borrego</fullName>
                </value>
                <value>
                    <fullName>PPA - 3rd Party</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>HELOC</fullName>
                </value>
                <value>
                    <fullName>Bond</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PPA</fullName>
                </value>
                <value>
                    <fullName>PACE</fullName>
                </value>
                <value>
                    <fullName>TEML (tax-exempt municipal lease)</fullName>
                </value>
                <value>
                    <fullName>GO Bond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fire_Suppression_Included__c</fullName>
        <label>Fire Suppression Included</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Approved_Production_Models__c</fullName>
        <label>First Approved Production Models</label>
        <summaryFilterItems>
            <field>Production_Modeling__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Production_Modeling__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Landowner_LOI_Submitted_Date__c</fullName>
        <inlineHelpText>Enter the Date the Proposal was first submitted</inlineHelpText>
        <label>First Landowner LOI Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Year_or_Pre_Paid_O_M_Commission__c</fullName>
        <formula>O_M_Contract_Value__c * Total_Commission_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Year or Pre Paid O&amp;M Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Year_or_Pre_Paid_O_M__c</fullName>
        <inlineHelpText>First Year or Pre-Paid OM amount from Pricing Tool- required at Contract Signed. Enter $0 if not applicable</inlineHelpText>
        <label>First Year or Pre Paid O&amp;M</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastDefinition__c</fullName>
        <formula>IF(
 NOT(ISBLANK(Forecast_Definition_Override__c )),
 Forecast_Definition_Override__c,
 IF(
  OR( Record_Type_Name__c = &quot;EPC&quot; , Record_Type_Name__c = &quot;Captive/OnSite&quot; ),
  CASE( StageName ,
   &quot;Preliminary 7C&quot; , &quot;Bulk Weighted Pipeline&quot; ,
   &quot;Prospecting&quot; , &quot;Bulk Weighted Pipeline&quot; ,
   &quot;Qualified&quot; , &quot;Bulk Weighted Pipeline&quot; ,
   &quot;Proposal Submitted&quot; , &quot;Bulk Weighted Pipeline&quot; ,
   &quot;Shortlisted/Interviews&quot; , &quot;Named Weighted Pipeline&quot; ,
   &quot;Project Awarded&quot; , &quot;Awarded&quot; ,
   &quot;Contract Signed&quot; , &quot;On WIP&quot; ,
   &quot;Not Included&quot;
   ),
  IF(
   OR(
    ISPICKVAL(StageName, &quot;LOI Signed&quot;),
    ISPICKVAL(StageName, &quot;Proposal Submitted&quot;), 
    AND(
     ISPICKVAL(StageName, &quot;Option Lease Executed&quot;),
     OR(
      DatePB3Complete__c=&quot;null&quot;,
      ISBLANK(DatePB3Complete__c)
      ),
     OR(
      ISBLANK(PB7DatefromProject__c),
      PB7DatefromProject__c&gt;TODAY()
      )
     )
    ),
   &quot;Bulk Weighted Pipeline&quot;,
   IF(
    OR(
     ISPICKVAL(StageName, &quot;Shortlisted/Interviews&quot;),
     ISPICKVAL(StageName, &quot;Entitlement&quot;), 
     ISPICKVAL(StageName, &quot;Ready for Market&quot;), 
     AND(
      ISPICKVAL(StageName, &quot;Project Booked&quot;),
      ISBLANK(PB7Date__c)
      ),
     AND(
      ISPICKVAL(StageName,&quot;Option Lease Executed&quot;),
      DatePB3Complete__c&lt;&gt;&quot;null&quot;,
      DatePB3Complete__c&lt;&gt;&quot; &quot;,
      OR(
       ISBLANK(PB7Date__c),
       DATEVALUE(PB7Date__c)&gt;TODAY()
       )
      )
     ),
    &quot;Named Weighted Pipeline&quot;, 
    IF(
     OR(
      ISPICKVAL(StageName, &quot;Finance Diligence and Mktg&quot;),
      AND(
       ISPICKVAL(StageName, &quot;Option Lease Executed&quot;),
       DATEVALUE(PB7Date__c)&lt;=TODAY()
       ),
      AND(
       ISPICKVAL(StageName, &quot;Project Booked&quot;),
       DATEVALUE(PB7Date__c)&lt;=TODAY()
       )
      ),
     &quot;Marketing to Buyer/Owner&quot;,
     IF(
      AND(
       ISPICKVAL(StageName, &quot;Project Awarded&quot;),
       OR(
        RecordTypeId=&quot;012340000007kaK&quot;,
        RecordTypeId=&quot;012800000007g0D&quot;
        )
       ),
      &quot;Awarded&quot;,
      IF(
       OR(
        ISPICKVAL(StageName, &quot;EPC Signed&quot;),
        ISPICKVAL(StageName, &quot;MIPA Signed&quot;),
        ISPICKVAL(StageName, &quot;Contract Signed&quot;)
        ),
       &quot;On WIP&quot;,
       &quot;Not Included&quot;
       )
      )
     )
    )
   )
  )
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Definition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Contract_Value__c</fullName>
        <description>WF field update used to populate new contact value based on reforecast defintion updated by Project Finance</description>
        <formula>IF( 
	Finalupdate__c = &quot;Named Weighted Pipeline&quot;, Solar_Storage__c , 

IF( 
	Finalupdate__c = &quot;Awarded&quot;, Project_Current_Contract_Price_Roll_Up__c, 

IF( 
	Finalupdate__c = &quot;Marketing to Buyer/Owner&quot;, Project_Current_Contract_Price_Roll_Up__c, 


NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Named Weighted Pipeline Forecast = S + S Contact Value
Mkt to B/O or Awarded = Original Project Contact Value</inlineHelpText>
        <label>Forecast Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Definition_Override__c</fullName>
        <description>Used by Project Finance to override the Forecast Definition field via formula</description>
        <inlineHelpText>Used by Project Finance to override the Forecast Definition field</inlineHelpText>
        <label>Forecast Definition Override</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_System_Size2__c</fullName>
        <description>WF field update which shows new system size value based on reforecast definitions updated by Project Finance</description>
        <formula>IF(
	Finalupdate__c= &quot;Named Weighted Pipeline&quot;,   Original_Contract_System_Size__c  ,

IF(
	Finalupdate__c  = &quot;Awarded&quot;, Project_System_Size_Roll_Up__c ,


IF(
    Finalupdate__c = &quot;Marketing to Buyer/Owner&quot;, Project_System_Size_Roll_Up__c ,


 
NULL)))</formula>
        <inlineHelpText>Named Weighted Pipeline Forecast = System Size
Mkt to B/O or Awarded = Overall Project System Size</inlineHelpText>
        <label>Forecast System Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GroSolar__c</fullName>
        <formula>Account.GroSolar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GroSolar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantee_Level__c</fullName>
        <label>Guarantee Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantee_Start_Date__c</fullName>
        <label>Guarantee Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guarantee_Status__c</fullName>
        <label>Guarantee Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Active</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HVAC_Included__c</fullName>
        <label>HVAC Included</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_Demand_Appliances__c</fullName>
        <description>Any special high deman appliances the customer uses.</description>
        <label>High Demand Appliances</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Host_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person who is or will be the utility’s customer. Sometimes this is a contact from a company.</inlineHelpText>
        <label>Host Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IFC_Spec_Yield__c</fullName>
        <description>Specific yield for Production Modelling in IFC Stage</description>
        <label>IFC Spec Yield</label>
        <summarizedField>Production_Modeling__c.Specific_Yield_kWh_kWp2__c</summarizedField>
        <summaryFilterItems>
            <field>Production_Modeling__c.Production_Modeling_Stage__c</field>
            <operation>equals</operation>
            <value>CD IFC</value>
        </summaryFilterItems>
        <summaryForeignKey>Production_Modeling__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IFR_Spec_Yield__c</fullName>
        <description>Roll Up Summary of Specific Yield (kWh/kWp) on IFR Production Model</description>
        <label>IFR Spec Yield</label>
        <summarizedField>Production_Modeling__c.Specific_Yield_kWh_kWp2__c</summarizedField>
        <summaryFilterItems>
            <field>Production_Modeling__c.Production_Modeling_Stage__c</field>
            <operation>equals</operation>
            <value>CD IFR</value>
        </summaryFilterItems>
        <summaryForeignKey>Production_Modeling__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IV_Curve__c</fullName>
        <label>IV Curve</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <label>10%</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>20%</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>30%</label>
                </value>
                <value>
                    <fullName>40</fullName>
                    <label>40%</label>
                </value>
                <value>
                    <fullName>50</fullName>
                    <label>50%</label>
                </value>
                <value>
                    <fullName>60</fullName>
                    <label>60%</label>
                </value>
                <value>
                    <fullName>70</fullName>
                    <label>70%</label>
                </value>
                <value>
                    <fullName>80</fullName>
                    <label>80%</label>
                </value>
                <value>
                    <fullName>90</fullName>
                    <label>90%</label>
                </value>
                <value>
                    <fullName>100</fullName>
                    <label>100%</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Importance_Factor_Architect_Engineer__c</fullName>
        <label>Importance Factor - Architect/Engineer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive_Storage_kWh__c</fullName>
        <inlineHelpText>required for design optimization (ready for marketing stage), type in 0 if no storage</inlineHelpText>
        <label>Incentive Storage kWh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incentive_Strategic_Zone__c</fullName>
        <description>Indicate whether or not the project is located in any of the NY strategic zones that increase either incentive or compensation.</description>
        <inlineHelpText>Indicate whether or not the project is located in any of the NY strategic zones that increase either incentive or compensation. List the applicable zones in the text field.</inlineHelpText>
        <label>Incentive Strategic Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentive_System_Size_AC__c</fullName>
        <inlineHelpText>indicate max AC system size that we can apply for incentive program or desired incentive tier, require for design optimization (ready for marketing stage). If not applicable, then fill in 0</inlineHelpText>
        <label>Incentive System Size AC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incentive_System_Size_DC__c</fullName>
        <inlineHelpText>indicate max DC system size that we can apply for incentive program or desired incentive tier, require for design optimization (ready for marketing stage). If not applicable, then fill in 0</inlineHelpText>
        <label>Incentive System Size DC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incentive_production_model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>required for design oprimization (ready for marketing stage)</inlineHelpText>
        <label>Incentive production model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Production_Modeling__c.Opportunity__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Production_Modeling__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Info_Confirmed__c</fullName>
        <inlineHelpText>shows that information documented regarding maintenance contract is confirmed by a contact at the account</inlineHelpText>
        <label>Info Confirmed ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_Type__c</fullName>
        <label>Install Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Roof</fullName>
                </value>
                <value>
                    <fullName>Ground</fullName>
                </value>
                <value>
                    <fullName>Carport</fullName>
                </value>
                <value>
                    <fullName>Tracker</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installation_Obstacles__c</fullName>
        <description>Used to convey to PM any potential obstacles in scheduling in addition to those already covered on the Account record.</description>
        <label>Scheduling Obstacles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer schedule</fullName>
                </value>
                <value>
                    <fullName>Electrical upgrade</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Financing</fullName>
                </value>
                <value>
                    <fullName>HOA approval required</fullName>
                </value>
                <value>
                    <fullName>Job Ready</fullName>
                </value>
                <value>
                    <fullName>Modules Backordered</fullName>
                </value>
                <value>
                    <fullName>Needs Roofer</fullName>
                </value>
                <value>
                    <fullName>Needs subcontractor</fullName>
                </value>
                <value>
                    <fullName>New Construction</fullName>
                </value>
                <value>
                    <fullName>Re-roof</fullName>
                </value>
                <value>
                    <fullName>Roof Reinforcement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterconnectionUpgradeCost__c</fullName>
        <formula>IF( Intx_Upgrade_Cost_Override__c &gt; 0, Intx_Upgrade_Cost_Override__c,
IF(
AND( IntxUpgradeCost__c &gt; 0, NOT(Intx_Upgrade_Cost_Override__c &gt; 0)) , IntxUpgradeCost__c ,
IF(
AND( Utility_Upgrades__c &gt; 0, NOT(Intx_Upgrade_Cost_Override__c &gt; 0)) , Utility_Upgrades__c ,
    Vertical__r.IntxUpgradeCost__c
  )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls the value of the Intx Cost assumption based on vertical OR the actual upgrade costs(if they exist) unless Intx Upgrade Cost override field is populated</inlineHelpText>
        <label>Interconnection Upgrade Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interconnection_Approach__c</fullName>
        <label>Interconnection Approach</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interconnection_Cost_Estimate__c</fullName>
        <label>Interconnection Cost Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interconnection_Description__c</fullName>
        <inlineHelpText>Description of Interconnection, next steps and details of the status</inlineHelpText>
        <label>Interconnection Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Interconnection_Rating__c</fullName>
        <label>Interconnection Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>A-</fullName>
                </value>
                <value>
                    <fullName>B+</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>B-</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interconnection_Status__c</fullName>
        <label>Interconnection Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Application Submitted</fullName>
                </value>
                <value>
                    <fullName>Fast Track Review</fullName>
                </value>
                <value>
                    <fullName>System Impact Study</fullName>
                </value>
                <value>
                    <fullName>Interconnection Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Prevailing_Wage__c</fullName>
        <description>Prevailing wage that is required to be paid to internal solar electricians</description>
        <inlineHelpText>Prevailing wage that is required to be paid to internal solar electricians</inlineHelpText>
        <label>Internal Prevailing Wage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IntxUpgradeCost__c</fullName>
        <inlineHelpText>Interconnection upgrade cost from Smartsheet</inlineHelpText>
        <label>Actual Intx Upgrade Cost- SS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Intx_Queue_Number__c</fullName>
        <inlineHelpText>Application Queue number</inlineHelpText>
        <label>Intx Queue Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intx_Upgrade_Cost_Override__c</fullName>
        <inlineHelpText>Overrides value of Interconnection Upgrade Cost field</inlineHelpText>
        <label>Intx Upgrade Cost Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Intx_Upgrade_Cost_W__c</fullName>
        <formula>InterconnectionUpgradeCost__c / Original_Contract_System_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Interconnection Upgrade Cost / System Size</inlineHelpText>
        <label>Intx Upgrade Cost $/W</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Intx_Utility__c</fullName>
        <inlineHelpText>Utility by which the Interconnection Application was submitted</inlineHelpText>
        <label>Intx Utility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Cost__c</fullName>
        <label>Inverter Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inverter_Delivery_Date_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to tell if the Inverter Delivery Date field has been updated since the last automated reset of the Delivery Date Updated field.</description>
        <label>Inverter Delivery Date Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inverter_Delivery_Date__c</fullName>
        <inlineHelpText>Estimated Date of Inverter Delivery</inlineHelpText>
        <label>Inverter Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inverter_Type__c</fullName>
        <label>Inverter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Irradiance_Threshold__c</fullName>
        <label>Irradiance Threshold (W/m2)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_13_14_Project_Size__c</fullName>
        <formula>IF( 
AND( 
CloseDate &gt;= DATE(2013, 01, 01), 
CloseDate &lt;= DATE(2014, 01, 31) 
), 
Project_System_Size__c , 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>January 13-14 Project Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Government - Small</fullName>
                </value>
                <value>
                    <fullName>Utility Scale</fullName>
                </value>
                <value>
                    <fullName>ES Ground</fullName>
                </value>
                <value>
                    <fullName>Non ES Ground</fullName>
                </value>
                <value>
                    <fullName>ES Built Environment</fullName>
                </value>
                <value>
                    <fullName>Non ES Built Environment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>DG Solar</fullName>
                </value>
                <value>
                    <fullName>DG Wind</fullName>
                </value>
                <value>
                    <fullName>DG SAS</fullName>
                </value>
                <value>
                    <fullName>LSR PV</fullName>
                </value>
                <value>
                    <fullName>Bulk ES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jon_Cerino__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jon Cerino</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L1_Date__c</fullName>
        <formula>IF( DATEVALUE(Date_of_1st_L1__c) &lt;  Date_of_L1_Due_Date__c, DATEVALUE(Date_of_1st_L1__c),Date_of_L1_Due_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LH_OppID__c</fullName>
        <description>Returns the current opportunity&apos;s id for LH to match, when Assigned Apps Engineer is not empty.</description>
        <formula>if(Assigned_Apps_Engineer__c != null, Id, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LH_OppID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH__LH_Test_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LH_Test_1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LH Test Opp 2 Account 1</relationshipLabel>
        <relationshipName>LH_Opp_Acc_1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>